feat(window): added title to window and extracted code to different files

--- a/docs/README.adoc
+++ b/docs/README.adoc
@@ -5,4 +5,4 @@ aichingert
 :toclevels: 3
 :experimental:
 
-a simple graphics library, maybe going to make a simple game engine.
+this should be a simple graphics library that everyone without much extra knowledge can use, maybe in the future I will be motivated to make this somewhat into a game engine.
